src/components/Header/Header.module.css
:root {
  --ago-header-padding-y: 2.5rem;
  --ago-header-padding-x: 2rem;
  --ago-header-image-size: 2rem;
  --ago-header-links-gap: 1.5rem;
  --ago-header-button-border-size: 0.15rem;
  --ago-header-button-border-radius: 0.25rem;
  --ago-header-button-border-padding-y: 0.15rem;
  --ago-header-button-size: var(--ago-header-image-size);
}

.header {
  display: flex;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  padding: var(--ago-header-padding-y) var(--ago-header-padding-x);
  @media only screen and (min-width: 768px) {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
  }
}

.logo {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: space-between;
  > div:first-of-type {
    height: var(--ago-header-image-size);
    width: var(--ago-header-image-size);
    a {
      cursor: pointer;
    }
    a,
    img {
      display: block;
      max-width: 100%;
      max-height: 100%;
    }
  }
  @media only screen and (min-width: 768px) {
    padding-bottom: 0;
  }
}

.label {
  width: max-content;
  margin-left: auto;
  input {
    display: none;
  }
  @media only screen and (max-width: 767px) {
    &:has(input:not(checked)) {
      + .linksMenu {
        height: 0;
      }
    }
    &:has(input:checked) {
      + .linksMenu {
        height: calc(
          100vh - var(--ago-header-image-size) - var(--ago-header-padding-y) * 4
        );
        margin-top: var(--ago-header-padding-y);
        margin-bottom: var(--ago-header-padding-y);
        overflow: auto;
      }
    }
  }
}

.linksMenu {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  gap: var(--ago-header-links-gap);
  transition: 0.5s;
  scrollbar-gutter: stable;
  @media only screen and (min-width: 768px) {
    height: auto;
    flex-direction: row;
  }
}

.menuButton {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  background-color: transparent;
  cursor: pointer;
  z-index: 0;
  padding-top: var(--ago-header-button-border-padding-y);
  padding-bottom: var(--ago-header-button-border-padding-y);
  border: solid var(--ago-header-button-border-size);
  border-radius: var(--ago-header-button-border-radius);
  box-sizing: border-box;
  width: var(--ago-header-button-size);
  height: var(--ago-header-button-size);
  > span {
    display: block;
    width: 80%;
    height: 0.25rem;
    margin: 0 auto;
    border-radius: var(--ago-header-button-border-radius);
    background-color: black;
  }
  ::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
    background-color: #fff;
    opacity: 0.25;
  }
  @media only screen and (min-width: 768px) {
    display: none;
  }
}

